Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_main_3_rte_altergo.txt
[kernel] Parsing main_3_rte.c (with preprocessing)
[kernel] main_3_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing main_3.c (with preprocessing)
  3     [kernel] Warning: end of file reached before line 3
[kernel] Frama-C aborted: invalid user input.
